...
    <string name="welcome_title">Welcome to Quick Cash</string>
    <string name="toast_missing_component">Please enter data in all the fields!</string>
    <string name="toast_invalid_email">Please enter a valid email address!</string>
    <string name="toast_invalid_password">Password: at least 1 digit, 1 uppercase, 1 lowercase,and 1 special character!</string>
    <string name="toast_password_mismatch">Passwords do not match!</string>
    <string name="toast_invalid_phone">Please enter a valid phone number!</string>
    <string name="toast_invalid_email_and_or_password">Invalid Email and/or Password, please try again.</string>
    <string name="toast_login_successful">Login Successful.  Redirecting to Home Page.</string>
    <string name="title_activity_job_form">JobFormActivity</string>
    <string name="title_activity_available_jobs">AvailableJobsActivity</string>
    <string name="toast_no_preference_found">No Preferences Found for your Account</string>
    <string name="duration_pay_rate_numeric">Please make sure duration and pay rate are numeric (dot allowed)</string>
    <string name="job_posted_successfully">Your job has been posted!</string>
...
